--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,10 @@ name = "microsoft-copilot-porxy"
 main = "dist/index.js"
 compatibility_date = "2024-05-24"
 compatibility_flags = ["nodejs_compat"]
-
+routes = [
+  { pattern = "copilot.robinjiang.com", custom_domain = true },
+ { pattern = "gpt.robinjiang.com", custom_domain = true }
+]
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
 # rather than the end user may result in better performance.
